--- a/localStorage.html
+++ b/localStorage.html
@@ -42,7 +42,7 @@
         }
 
         body {
-            font-family: 'Poppins', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, sans-serif;
+            font-family: Poppins, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, sans-serif;
             background-color: var(--background-color);
             color: var(--text-primary);
             min-height: 100vh;
@@ -1711,3 +1711,4 @@
 </body>
 
 </html>
+
