--- a/localStorage.html
+++ b/localStorage.html
@@ -42,7 +42,7 @@
         }
 
         body {
-            font-family: Arial, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, sans-serif;
+            font-family: 'Arial', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, sans-serif;
             background-color: var(--background-color);
             color: var(--text-primary);
             min-height: 100vh;
@@ -1711,5 +1711,6 @@
 </body>
 
 </html>
+
 
 
